--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -24,11 +24,11 @@
           <div class="filters brand-brown-bg">
             <h3 class="text-uppercase brand-brown-dark font-semibold">Filters by</h3>
 
-            <div class="protein" ng-repeat = "subcategory in subCategories">
+            <div class="protein" ng-repeat = "subcategory in subCategories" ng-if="products.length > 0">
               <div class="checkbox">
-                <input type="checkbox" id="{{subcategory.name | nospace}}">
+                <input type="checkbox" id="{{subcategory.name | nospace | lowercase}}">
 
-                <label class="white" for="{{subcategory.name | nospace}}">
+                <label class="white" for="{{subcategory.name | nospace | lowercase}}">
                   <span></span>{{subcategory.name}}</label>
               </div>
             </div>
