new images added

--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -58,23 +58,7 @@
   }
   // weight-manangement
   .tab-chart {
-    .nav-tabs {
-      li:first-child {
-        a {
-          padding: 8px 28px;
-        }
-      }
-      li.active:first-child {
-        a {
-          padding: 8px 28px;
-        }
-      }
-      li {
-        a {
-          padding: 10px 28px;
-        }
-      }
-    }
+    .nav-tabs li a { width: 124px; }
     .chart-head {
       p {
         font-size: 16px;
@@ -88,7 +72,6 @@
     width: 70%;
   }
   .consult-chart {
-    height: 75px;
     .consult {
       margin-top: 47px;
     }
@@ -231,6 +214,9 @@
     }
   }
 }
+@media (max-width: $screen-md-max) {
+  .tab-body .pricing { bottom: -80px; }
+}
 @media (max-width: $screen-sm-max) {
   // faq
   .faq {
@@ -333,23 +319,7 @@
     }
   }
   .tab-chart {
-    .nav-tabs {
-      li:first-child {
-        a {
-          padding: 6px 26px;
-        }
-      }
-      li.active:first-child {
-        a {
-          padding: 6px 26px;
-        }
-      }
-      li {
-        a {
-          padding: 8px 26px;
-        }
-      }
-    }
+    .nav-tabs li a { width: 114px; }
     .chart-head {
       p {
         font-size: 15px;
@@ -415,7 +385,6 @@
     height: 230px;
   }
   .consult-chart {
-    height: 67px;
     .consult {
       margin-top: 42px;
     }
@@ -778,22 +747,12 @@
     }
   }
   .healthchart-list {
-    width: 466px;
+    width: 450px;
     margin: 40px auto;
   }
   .tab-chart {
-    width: 390px;
+    width: 375px;
     .nav-tabs {
-      li:first-child {
-        a {
-          padding: 6px 13px;
-        }
-      }
-      li.active:first-child {
-        a {
-          padding: 6px 13px;
-        }
-      }
       li.active {
         a {
           &:after {
@@ -805,10 +764,11 @@
           }
         }
       }
+      li:first-child a { padding: 23px 0 0; }
       li {
         margin: 0 2px -2px 0;
         a {
-          padding: 8px 13px;
+          width: 70px;
           &:before {
             height: 34px;
           }
@@ -817,7 +777,7 @@
     }
     .chart-head {
       p {
-        font-size: 13px;
+        font-size: 12px;
         font-weight: normal;
       }
       .price {
@@ -844,6 +804,11 @@
           margin-bottom: 6px;
           font-size: 13px;
         }
+      }
+      .pricing {
+        position: relative;
+        right: 0; bottom: 0;
+        span { font-size: 24px; }
       }
     }
     .tab-foot {
@@ -879,7 +844,6 @@
   }
   .consult-chart {
     width: 70px;
-    height: 55px;
     .noconsult {
       @include square(35px);
       border: 2px solid $brand-primary;
@@ -887,9 +851,8 @@
       line-height: 30px;
       top: -15px;
     }
-    .consult {
-      margin-top: 35px;
-      font-size: 11px;
+    .month, .duration {
+      font-size: 12px;
     }
   }
   .slider-round {
@@ -1296,14 +1259,9 @@
   .tab-chart {
     width: 290px;
     .nav-tabs {
-      li:first-child {
+      li:first-child, li.active:first-child {
         a {
-          padding: 4px 8px;
-        }
-      }
-      li.active:first-child {
-        a {
-          padding: 4px 8px;
+          padding: 15px 0 0;
         }
       }
       li.active {
@@ -1319,7 +1277,9 @@
       }
       li {
         a {
-          padding: 6px 8px;
+          width: 52px;
+          height: 56px;
+          padding: 20px 0 0;
           &:before {
             width: 1px;
             height: 28px;
@@ -1390,8 +1350,7 @@
     }
   }
   .consult-chart {
-    width: 60px;
-    height: 42px;
+    @include square(60px);
     margin: 0 0 10px;
     .noconsult {
       @include square(25px);
@@ -1399,10 +1358,8 @@
       font-size: 14px;
       line-height: 20px;
     }
-    .consult {
-      margin-top: 25px;
-      font-size: 9px;
-    }
+    .month { margin-top: 25px; }
+    .month, .duration { font-size: 10px; }
   }
   .slider-round {
     padding: 0 10px;
