--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -24,10 +24,9 @@
           <div class="filters brand-brown-bg">
             <h3 class="text-uppercase brand-brown-dark font-semibold">Filters by</h3>
 
-            <div class="protein" ng-repeat = "subcategory in subCategories" ng-if="products.length > 0">
-              <div class="checkbox">
-                <input type="checkbox" id="{{subcategory.name | nospace | lowercase}}">
-
+            <div class="protein" ng-repeat="subcategory in subCategories" ng-if="subCategories.length > 0">
+              <div class="checkbox" >
+                <input type="checkbox" id="{{subcategory.name | nospace | lowercase}}" ng-click="filterIt(subcategory.id)">
                 <label class="white" for="{{subcategory.name | nospace | lowercase}}">
                   <span></span>{{subcategory.name}}</label>
               </div>
