--- a/views/content/productdetail.html
+++ b/views/content/productdetail.html
@@ -36,8 +36,8 @@
                 </form>
               </div>
               <div class="product-buttons">
-                <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
-                <a href="" class="btn btn-primary text-uppercase">Continue Shopping</a>
+                <a class="btn btn-primary text-uppercase" ng-click="cartAdd()">Add to cart</a>
+                <a ui-sref="home" class="btn btn-primary text-uppercase">Continue Shopping</a>
               </div>
             </div>
           </div>
