--- a/views/content/productdetail.html
+++ b/views/content/productdetail.html
@@ -8,35 +8,41 @@
       <div class="row">
         <div class="col-md-6">
           <div class="product-image">
-            <img src="img/cookies.jpg" alt="" class="img-responsive">
+            <img src="{{product.image | serverimage}}" alt="" class="img-responsive">
           </div>
         </div>
 
         <div class="col-md-6">
           <div class="row">
             <div class="col-md-10">
-              <h3 class="text-uppercase font-semibold">Baked Potato Chips <span class="text-center font-semibold brand-primary prd-price"><i class="fa fa-inr"></i> 225</span></h3>
+              <h3 class="text-uppercase font-semibold">{{product.name || 'Loading..'}}
+                <span class="text-center font-semibold brand-primary prd-price">
+                  <i class="fa fa-inr"></i>
+                  {{product.price}}</span>
+              </h3>
               <div class="prd-descp">
                 <div class="product-price inline-block">
-                  <p class="font-semibold">Net Weight: 100 gms</p>
+                  <p class="font-semibold">Net Weight:
+                    {{product.netweight}}
+                    gms</p>
                 </div>
                 <form action="" class="inline-block">
                   <div class="form-group relate">
                     <label for="quan" class="font-semibold">Quantity :</label>
                     <div class="custom-select inline-block">
-                    <select class="form-control" id="quan">
-                      <option>01</option>
-                      <option>02</option>
-                      <option>03</option>
-                      <option>04</option>
-                    </select>
-                    <span class="select-caret"></span>
+                      <select class="form-control" id="quan">
+                        <option>01</option>
+                        <option>02</option>
+                        <option>03</option>
+                        <option>04</option>
+                      </select>
+                      <span class="select-caret"></span>
                     </div>
                   </div>
                 </form>
               </div>
               <div class="product-buttons">
-                <a class="btn btn-primary text-uppercase" ng-click="cartAdd()">Add to cart</a>
+                <a class="btn btn-primary text-uppercase" ng-click="cartAdd(product.id)">Add to cart</a>
                 <a ui-sref="home" class="btn btn-primary text-uppercase">Continue Shopping</a>
               </div>
             </div>
@@ -47,19 +53,13 @@
                 <tab-heading>
                   <span class="text-uppercase font-semibold">About</span>
                 </tab-heading>
-                <div class="inner-product-detail">
-                  <p class="">Love eating potato chips and don’t know how to deal with the craving? The world may say a resounding no to potato chips, but there is no need to be in denial. Here are baked potato-crisps that allow you to savor your favorite comfort food and do it without guilt.</p>
-                  <p class="">Reduced calories, crunchy and almost totally free of oil, try our baked potato chips that are sheer pleasure, especially with a tangy salsa or a smooth curd dip.</p>
-                  <span class=""><sup>*</sup>Gluten Free</span>
-                  <br>
-                  <span class=""><sup>*</sup>Low Fat</span>
-                </div>
+                <div class="inner-product-detail" ng-bind-html="product.about"></div>
               </tab>
               <tab>
                 <tab-heading>
                   <span class="text-uppercase font-semibold">Nutritional Value</span>
                 </tab-heading>
-                <div class="inner-product-detail"></div>
+                <div class="inner-product-detail" ng-bind-html="product.nutritional"></div>
               </tab>
             </tabset>
           </div>
@@ -78,14 +78,16 @@
             <div class="col-md-4 col-sm-4 col-xs-4" ng-repeat="likepro in likes">
               <div class="inner-like text-center">
                 <div class="like-image round">
-                  <img ng-src="{{likepro.image}}" alt="" class="img-responsive" />
+                  <img ng-src="{{likepro.image}}" alt="" class="img-responsive"/>
                 </div>
-                <span class="text-uppercase brand-primary font-semibold">{{likepro.name}} | <i class="fa fa-inr"></i>{{likepro.price}}</span>
+                <span class="text-uppercase brand-primary font-semibold">{{likepro.name}}
+                  |
+                  <i class="fa fa-inr"></i>{{likepro.price}}</span>
               </div>
             </div>
           </div>
         </uib-slide>
-    </uib-carousel>
+      </uib-carousel>
     </div>
   </div>
 </section>
