changes and new pages added

--- a/views/content/healthmanagement.html
+++ b/views/content/healthmanagement.html
@@ -20,7 +20,7 @@
                 <div class="category-imghold  round">
                   <img src="img/health/ailment.png" alt="" class="img-responsive">
                 </div>
-                <figcaption class="text-uppercase brand-brown-dark font-semibold">ailment control</figcaption>
+                <figcaption class="text-uppercase brand-brown-dark font-semibold">Weight loss for kids</figcaption>
               </a>
             </figure>
           </div>
@@ -32,7 +32,7 @@
                 <div class="category-imghold round">
                   <img src="img/health/ageing.png" alt="" class="img-responsive">
                 </div>
-                <figcaption class="text-uppercase brand-brown-dark text-bold">healthy ageing</figcaption>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">Weightloss with healthgain</figcaption>
               </a>
             </figure>
           </div>
@@ -44,7 +44,7 @@
                 <div class="category-imghold round">
                   <img src="img/health/lactation.png" alt="" class="img-responsive">
                 </div>
-                <figcaption class="text-uppercase brand-brown-dark text-bold">lactation</figcaption>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">Post pregnancy weight loss with lactation</figcaption>
               </a>
             </figure>
           </div>
@@ -56,7 +56,7 @@
                 <div class="category-imghold round">
                   <img src="img/health/senior.png" alt="" class="img-responsive">
                 </div>
-                <figcaption class="text-uppercase brand-brown-dark text-bold">senior citizen</figcaption>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">weightloss with PCOS and Insulin Resistence</figcaption>
               </a>
             </figure>
           </div>
@@ -68,7 +68,7 @@
                 <div class="category-imghold round">
                   <img src="img/health/kids.png" alt="" class="img-responsive">
                 </div>
-                <figcaption class="text-uppercase brand-brown-dark text-bold">super kids</figcaption>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">Healthy aging (looking for anti aging)</figcaption>
               </a>
             </figure>
           </div>
@@ -106,7 +106,7 @@
                 <div class="category-imghold round">
                   <img src="img/health/loss.png" alt="" class="img-responsive">
                 </div>
-                <figcaption class="text-uppercase brand-brown-dark text-bold">inch loss</figcaption>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">ailment control</figcaption>
               </a>
             </figure>
           </div>
@@ -118,7 +118,7 @@
                 <div class="category-imghold round">
                   <img src="img/health/suclpting.png" alt="" class="img-responsive">
                 </div>
-                <figcaption class="text-uppercase brand-brown-dark text-bold">cool suclpting</figcaption>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">Cancer support</figcaption>
               </a>
             </figure>
           </div>
@@ -130,7 +130,7 @@
                 <div class="category-imghold round">
                   <img src="img/health/cancer.png" alt="" class="img-responsive">
                 </div>
-                <figcaption class="text-uppercase brand-brown-dark text-bold">post cancer</figcaption>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">Marathon / Sports Nutrition</figcaption>
               </a>
             </figure>
           </div>
