--- a/views/content/healthpackages.html
+++ b/views/content/healthpackages.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="what-health-goal">
-    <h2 class="text-uppercase text-center brand-brown-dark font-semibold">Whats your health goal?</h2>
+    <h2 class="text-uppercase text-center brand-brown-dark font-semibold">What's your health goal?</h2>
 
     <div class="health-goals brand-brown-bg">
       <div class="container">
