--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -287,8 +287,8 @@
   <div class="care-programs">
     <h3 class="text-center text-uppercase brand-brown-dark font-semibold">Get to know more about our care programs:</h3>
     <div class="care-buttons text-center">
-      <a href="" class="btn btn-primary-inverse text-uppercase"><img src="img/packages/1.png" alt="" class="img-responsive">Weight Loss</a>
-      <a href="" class="btn btn-primary-inverse text-uppercase"><img src="img/packages/2.png" alt="" class="img-responsive">Health Management</a>
+      <a href="#/weightmanagement" class="btn btn-primary-inverse text-uppercase"><img src="img/packages/1.png" alt="" class="img-responsive">Weight Loss</a>
+      <a href="#/healthmanagement" class="btn btn-primary-inverse text-uppercase"><img src="img/packages/2.png" alt="" class="img-responsive">Health Management</a>
     </div>
   </div>
 </section>
