--- a/views/footer.html
+++ b/views/footer.html
@@ -54,8 +54,7 @@
                     <div class="submenu text-uppercase">
                         <ul>
                             <li><a href="" title="Calorie Meter">CALORIE METER</a></li>
-                            <li> <a href="" title="Recipes">RECIPES</a></li>
-                            <li><a href="" title="Restaurant Menus">RESTAURANT MENUS</a></li>
+                            <li> <a href="#/recipes" title="Recipes">RECIPES</a></li>
                         </ul>
                     </div>
                 </div>
