--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -1,6 +1,6 @@
 <section>
   <div class="selfcare-image">
-    <img ng-src="{{productCategory.bannerimg}}" alt="">
+    <img ng-src="{{productCategory.bannerimg | serverimage}}" alt="">
     <h2 class="text-uppercase get-center white font-semibold">{{productCategory.name}}</h2>
   </div>
 
