--- a/views/content/home.html
+++ b/views/content/home.html
@@ -46,7 +46,7 @@
       <div class="col-md-4 col-sm-12">
         <div class="health-info">
           <h3 class="brand-blue title text-uppercase font-gotham-bold">cool <span class="block">sculpting</span></h3>
-          <p class="text-justify health-descp">The CoolSculpting procedure eliminates stubborn fat safely and effectively, without surgery or downtime. This fat reduction treatment is the only FDA-cleared procedure.</p>
+          <p class="text-justify health-descp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
           <button class="btn btn-blue text-uppercase font-gotham-bold letter-space know-more">know more</button>
           <div class="health-imgholder">
             <img src="img/cool-sculpting.png" alt="" class="img-responsive">
@@ -123,7 +123,7 @@
                 <h4 class="text-left brand-brown-dark name font-semibold letter-space">{{slide.name}}</h4>
                 <span class="text-left block brand-primary letter-space">{{slide.location}}</span>
                 <div class="descp brand-primary">
-                  <p class="text-justify">{{slide.description}}</p>
+                  <p class="text-justify">{{slide.descp}}</p>
                 </div>
                   <div class="get-round weight-info text-center">
                   <span class="text-uppercase brand-brown-dark-bg lost">Lost</span>
@@ -159,7 +159,7 @@
               </div>
               <p class="descp m-center">Recipes that help you eat right without compromising on taste.</p>
               <div class="more text-center">
-                <button class="btn btn-primary text-uppercase" type="button">Coming Soon</button>
+                <button class="btn btn-primary text-uppercase" type="button">Try them</button>
               </div>
             </div>
           </div>
@@ -171,7 +171,7 @@
               </div>
               <p class="descp m-center">Browse through nutritional information of your favourite foods with this easy to use calculator and learn which foods and beverages work for your waistline and which don't.</p>
               <div class="more text-center">
-                <button class="btn btn-primary text-uppercase" type="button">Coming Soon</button>
+                <button class="btn btn-primary text-uppercase" type="button">track them</button>
               </div>
             </div>
           </div>
@@ -231,7 +231,7 @@
             </div>
           </div>
           <div class="text-right btn-center">
-            <button class="text-uppercase btn btn-primary" type="button">Coming Soon</button>
+            <button class="text-uppercase btn btn-primary" type="button">Read more</button>
           </div>
         </div>
       </div>
@@ -248,12 +248,9 @@
               <div class="custom-select">
                 <select name="" id="" class="form-control text-bold">
                   <option value="">Choose a Category</option>
-                  <option value="">Weight Loss</option>
-                  <option value="">Weight Gain</option>
-                  <option value="">Diet</option>
-                  <option value="">Health and Immunity</option>
-                  <option value="">Ailment Control</option>
-                  <option value="">General</option>
+                  <option value="">Category 1</option>
+                  <option value="">Category 2</option>
+                  <option value="">Category 3</option>
                 </select>
                 <span class="select-caret"></span>
               </div>
