--- a/sass/main.scss
+++ b/sass/main.scss
@@ -325,8 +325,11 @@ textarea {
 .btn {
   font-size: 12px;
   padding: 12px 24px;
-  @extend.letter-space;
   border-radius: 4px;
+  &:hover {
+    color: $brand-primary;
+    background-color: white;
+  }
 }
 button {
   &:focus {
@@ -553,7 +556,7 @@ button {
 .section-story {
   padding: 60px 0;
   .slider {
-    padding: 40px 120px 2px;
+    padding: 40px 120px;
     .carousel-control.left {
       top: -50px;
       left: -90px;
@@ -685,9 +688,9 @@ button {
     input,
     textarea {
       @include placeholder {
-        font-family: $font-baubodi;
+        font-family: $font-vista;
         font-weight: bold;
-        letter-spacing: 2px;
+        font-style: italic;
       };
     }
   }
@@ -1401,6 +1404,7 @@ footer {
   }
   .foot-btn {
     min-width: 250px;
+    border: 2px solid $brand-primary;
     border-radius: 5px;
     padding: 12px 25px;
     font-size: 18px;
