--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -23,7 +23,7 @@
               <br>
               <span>f: <a href="tel:02261312200">022 61312200</a></span>
               <br>
-              <a href="" class="text-uppercase brand-teal">View Map</a>
+              <a href="https://goo.gl/maps/PpeZsiFg5po" target="_blank" class="text-uppercase brand-teal">View Map</a>
             </div>
 
             <div class="santacruz">
@@ -38,7 +38,7 @@
               <br>
               <span>t: <a href="tel:9819725206">9819725206</a>, <a href="tel:+912226142435">+91 22-26142435</a>,<br><a href="tel:+912226109432" class="san-num">+91 22-26109432</a></span>
               <br>
-              <a href="" class="text-uppercase brand-teal">View Map</a>
+              <a href="https://goo.gl/maps/bDhwG4GYpcB2" target="_blank" class="text-uppercase brand-teal">View Map</a>
             </div>
           </div>
 
@@ -54,7 +54,7 @@
             <br>
             <span>t: <a href="tel:9339564578">9339564578</a></span>
             <br>
-            <a href="" class="text-uppercase brand-teal">View Map</a>
+            <a href="" target="_blank" class="text-uppercase brand-teal">View Map</a>
           </div>
         </div>
 
