--- a/views/content/home.html
+++ b/views/content/home.html
@@ -115,7 +115,10 @@
           <div class="row">
             <div class="col-md-6">
               <div class="story-video">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe>
+                <!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe> -->
+                <a class="various fancybox.iframe" fancybox href="https://www.youtube.com/embed/dnmzOqhu62k?autoplay=1">
+                  <img src="img/videos/home-rishabh.jpg" alt="" />
+                </a>
               </div>
             </div>
             <div class="col-md-6">
